# seven_md

./: .dockerignore  .editorconfig  .eslintignore  .eslintrc.cjs  .gitattributes  .gitignore  .npmrc  .prettierignore  CHANGELOG.md  CITATION.cff  CODEOWNERS  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  index.html  package.json  playwright.config.ts  skills-lock.json  tailwind.config.js  test.md  vite.config.ts  vitest.config.ts
.cargo/: config.toml
.github/: CONTRIBUTING.md  FUNDING.yml  README.md  dependabot.yml  labels.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  question.md
.github/workflows/: README.md  ci.yml  e2e.yml  release.yml  security.yml  test-build.yml  windows-build.yml
docs/: API-REFERENCE.md  ARCHITECTURE.md  CONTRIBUTING-CODE.md  DEBUGGING.md  E2E-TESTING.md  FUTURE_TODO.md  ONE-DAY-WITH-OPENSPEC.md  OPEN_SOURCE_SETUP.md  PROJECT_FILES.md  TESTING.md  USER-GUIDE.md  todo-comparison-report.md  windows-installation-guide.md  windows-test-plan.md  windows-troubleshooting.md
docs/v1/: main.js  menu-config.js  prototype.html  style.css
docs/v1.0/: interaction-spec.md
e2e/fixtures/: index.ts
e2e/helpers/: a11y.ts  health-check.ts  test-data.ts  test-helpers.ts
e2e/pages/: BasePage.ts  EditorPage.ts  FileDialogPage.ts  MenuBarPage.ts  PageObjectFactory.ts  PreviewPage.ts  SettingsPage.ts
e2e/setup/: ci-setup.sh  coverage-report.ts  failure-analysis.ts  global-setup.ts  global-teardown.ts
e2e/tests/: accessibility.spec.ts  debug.spec.ts
playwright-report/: index.html  results.json
src/: App.test.tsx  App.tsx  AppV2.tsx  index.css  main.tsx  tauriCommands.ts
src-tauri/: Cargo.toml  build.rs  code-signing.md  tauri.conf.json5
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: .gitkeep  icon.icns
src-tauri/nsis/: license.txt
src-tauri/src/: commands.rs  logger.rs  main.rs
src-tauri/wix/: template.xml
src/commands/: index.ts  registry.ts
src/components/: CollapsiblePane.tsx  DirtyTabDialog.test.tsx  DirtyTabDialog.tsx  EditorPane.tsx  FileTree.tsx  FileTreeItem.test.tsx  FileTreeItem.tsx  LanguageSelector.tsx  LanguageSwitcher.test.tsx  LanguageSwitcher.tsx  PreviewPane.tsx  (+2 more)
(+563 files in other folders)
