[package]
name = "SevenMD"
version = "0.0.0"
description = "A cross-platform markdown reader for macOS and Windows"
authors = ["avinzhang <qwzhang01@users.noreply.github.com>"]
license = "MIT"
repository = "https://github.com/qwzhang01/seven_md"
default-run = "SevenMD"
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = "2.5.6"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = "2.5.6"
tauri-plugin-dialog = "2.7.0"
tauri-plugin-fs = "2.5.0"
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.4"

[dev-dependencies]
tempfile = "3.10"
